--- a/scss/partials/_herosection.scss
+++ b/scss/partials/_herosection.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    overflow: hidden;
     z-index: 2; /*Para ordenar div - suerponer uno por otro */
 }
 
@@ -19,18 +20,18 @@
 .hero__contenedor{
     width: 400px;
     position: relative;
-    left: 4rem;
+    left: 3rem;
 
 }
 
 .hero__titulo{   
     color: $color-hero-titulo;
-    font-size: 3.5rem;  
+    font-size: 3.2rem;  
     margin-bottom: 3rem;
 }
 
 .btn__compra{
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-top: 0.2rem;
 }
 
